LinKreta_POC_Repository/force-app/main/default/objects/DepthOfRelationship__c/DepthOfRelationship__c.object-meta.xml
<CustomObject>
    <label>Depth Of Relationship</label>
    <nameField>
        <label>Depth Of Relationship Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Depth Of Relationships</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>