LinKreta_POC_Repository/force-app/main/default/objects/DepthOfRelationship__c/fields/ClientContact__c.field-meta.xml
<CustomField>
    <fullName>ClientContact__c</fullName>
    <label>Client Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Depth Of Relationships</relationshipLabel>
    <relationshipName>Depth_Of_Relationships</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>