LinKreta_POC_Repository/force-app/main/default/objects/DepthOfRelationship__c/fields/GTRL__c.field-meta.xml
<CustomField>
    <fullName>GTRL__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>GT RL</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Depth_Of_Relationships</relationshipName>
    <type>Lookup</type>
</CustomField>