LinKreta_POC_Repository/force-app/main/default/objects/DepthOfRelationship__c/fields/ProposedActionDuringTheYear__c.field-meta.xml
<CustomField>
    <fullName>ProposedActionDuringTheYear__c</fullName>
    <label>Proposed Action During The Year</label>
    <length>255</length>
    <type>Text</type>
</CustomField>