LinKreta_POC_Repository/force-app/main/default/objects/DepthOfRelationship__c/fields/StrengthOfRelationship__c.field-meta.xml
<CustomField>
    <fullName>StrengthOfRelationship__c</fullName>
    <label>Strength Of Relationship</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>