LinKreta_POC_Repository/force-app/main/default/objects/DepthOfRelationship__c/fields/StrengthOfRelationshipIcon__c.field-meta.xml
<CustomField>
    <fullName>StrengthOfRelationshipIcon__c</fullName>
    <formula>CASE( StrengthOfRelationship__c ,
&quot;Low&quot;,IMAGE(&quot;https://grantthornton--dev1--c.documentforce.com/sfc/servlet.shepherd/version/renditionDownload?rendition=ORIGINAL_Jpg&amp;versionId=0680w000000FDOV&amp;operationContext=CHATTER&amp;contentId=05T0w000004FsSK&quot;, &quot;Low&quot;),
&quot;Medium&quot;,IMAGE(&quot;https://grantthornton--dev1--c.documentforce.com/sfc/servlet.shepherd/version/renditionDownload?rendition=ORIGINAL_Jpg&amp;versionId=0680w000000FDOL&amp;operationContext=CHATTER&amp;contentId=05T0w000004FsSA&quot;, &quot;Medium&quot;),IMAGE(&quot;https://grantthornton--dev1--c.documentforce.com/sfc/servlet.shepherd/version/renditionDownload?rendition=ORIGINAL_Jpg&amp;versionId=0680w000000FDOG&amp;operationContext=CHATTER&amp;contentId=05T0w000004FsS0&quot;, &quot;High&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Strength Of Relationship Icon</label>
    <type>Text</type>
</CustomField>